# storage/api-docs/api-docs.json
@@ -5025,7 +5025,7 @@
             }
         },
         "/getmenu": {
-            "get": {
+            "post": {
                 "tags": [
                     "Menu"
                 ],
@@ -5037,6 +5037,123 @@
                         "name": "supplier_id",
                         "in": "query",
                         "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    },
+                    "500": {
+                        "description": "erreur serveur 500"
+                    }
+                },
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ]
+            }
+        },
+        "/add_product_to_submenu": {
+            "post": {
+                "tags": [
+                    "Menu"
+                ],
+                "summary": "Add product to subMenu",
+                "description": "Returns subMenu.",
+                "operationId": "AddProductToSubMenu",
+                "parameters": [
+                    {
+                        "name": "submenu_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "name": "product_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "name": "position",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    },
+                    "500": {
+                        "description": "erreur serveur 500"
+                    }
+                },
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ]
+            }
+        },
+        "/add_submenu": {
+            "post": {
+                "tags": [
+                    "Menu"
+                ],
+                "summary": "Add subMenu",
+                "description": "Returns subMenu.",
+                "operationId": "AddSubMenu",
+                "parameters": [
+                    {
+                        "name": "supplier_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "name": "position",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "name": "description",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "name": "image",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "file"
+                        }
                     }
                 ],
                 "responses": {
